[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["jovycarvalho <jovycarvalho@gmail.com>"]
readme = "README.md"
packages = [{include = "notas_musicais", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.13.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.42"
mkdocstrings = "^0.26.2"
mkdocstrings-python = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
